Some changes in code and removed deprecated call